--- a/TODO.txt
+++ b/TODO.txt
@@ -8,9 +8,11 @@ todo:
 
 A3 look over:
     todo:
-    - do not tolower all incoming tokens in scanner
-    - implement errors
-    - nicely display 2d table for debug?
+    - explain all symantic actions and symbols, explanation of organization
+    - apply table deletions?
+        maybe i should be outputting symboltables and entries to a file as i go.
+        maybe deletin an entry with link
+
 
     - no need for sub scope (new semantic table) when creating for or if statements
 
@@ -19,42 +21,28 @@ A3 look over:
     - using a variable before it is defined.
     - duplicate variable definition (in same scope)
 
+    - error recovery
+    its not enough though maybe if each production had its own set…
 
-    arraySize changed int to INT
-
+    - nicely display 2d table for debug?
 
     done:
-	for parsing the PPT_grammar into object, need to check if EPSILON in the production line, if not then in the first set because it may be in there resulting in it having both a first and follow set.
+    - do not tolower() all incoming tokens in scanner
+	- Parsing the PPT_grammar into objects
+    - Force program function to be the last function in the code
+        all classes and free functions must be declared before it, in that order.
+        - a class can only declare variables and functions
+        a function can declare/assign variables, use (class/free) functions, use expressions
+        program behaves like a function but there is only one (main program) and it must be at the end.
 
-	I think I will force program function to be the last function in the code
-        all classes and free functions must be declared before it.
-    a class can only declare variables and functions
-    a function can declare/assign variables, use (class/free) functions, use expressions
-    program behaves like a function but there is only one (main program) and it must be at the end.
-	
 	I realized I had been using indice for variable declaration and assignmnent, but for decl I need to be using arraySize which forces integer index and cannot be an expression inside the [].
 	- arraySize -> [ INT ] arraySize
 
+	error recovery now is done with syncronizing tokens ;, }, {
+	its not enough though maybe if each production had its own set…
 
+    Before I was reating a dummy entry as I waited for the attribute migration but I saw that was not working.
+    now I am using the stack method, I had to realise there are not supposed to be any semantic processor errors to catch, if there is a problem it is with the grammar or the coding. you should be popping what you are expecting to pop on the attr_stack.
 
-A2 look over:
-    in factor it is figuratively a int/float
-    in arithExpr it is figuratively a int/float
-
-    in type it is a litteral 'int'/'float'
-
-    a var decl can have a either float/int or id type. also no type at all listed if youve already created it in memory and are just referencing it... must go back and edit the grammar again...
-
-    added a ; to end of varorfunc?
-
-**  added a followSet to aParams, please check kfgedit and update
-    indice         -> [ arithExpr ] indice
-                  | . indice | EPSILON
-        addded . to vardecltail
-
-    expr first: 'space ,' error
-
-    paramsorindice elif ?
-
-    a func decl can only have 1 level idnest?
-
+    - FIXED. in the entry type for a function that passes a array parameter, the indexes are saving backwards.
+    - FIXED. Broken SymbolTable search
