checking nested object references for proper declaration and valid index referencing

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,10 @@ Main objectives & notes:
         maybe deletin an entry with link
 
 
+    - I tried to change my symbol table implementation to a sort of doubly linked list...
+        but am putting this plan/idea aside for now...
+
+
     # regex to highlight all semantic symbols in grammar
 	[A-Z]+_
 
