--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,21 @@
 Main objectives & notes:
 	re-read important slides
 
+	have each asisgnment reference the variable? to know its type for expression checking?
+
+	nested functions calling typing issue
+
+	function calls type checking correctly but not checking for expected array specs
+
+	queued changes for next grammar update:
+	- class and free function placement freedom
+	- for loops no longer instantiate variable in first section
+	- in factor you can have notnotnot...
+
     in the classUsageDict, store Tokens to be able to reference line numbers in 'second pass'
     - error handling if a generator production, infinitly produces them on parsing stack
         each production should have a set of recovery tokens?
+        - also scan errors are not handled in parser (try ' in an arith expr)
     - explain all symantic actions and symbols, explanation of organization
     - apply table deletions?
         maybe i should be outputting symboltables and entries to a file as i go.
@@ -68,6 +80,15 @@ A4 look over:
     ATTRIBUTE MIGRATION description for nested variable calls in indices:
         In the semantic analyser, I use the variable indice_lists a a list of lists. At the start of an indice for a variable assign or variable call, a  new list is appended to the main list. everytime a operand/operator/factor is encountered it appends to the list list and if a variable call is encountered and it has indices, the entry is appended to the tail, then a new list is appended to handle the nested arith expression that could contain more nested variable calls. When an indice finishes, append it to the index section of the last entry of the list below the indice_lists tail (should be the pending variable call entry). when the indices finish for a given variable call, check if the variable exists and the correct number of dimensions were specified.
 
+    index values note:
+        float index will be allowed and will be concatenated at runtime into ints
+        objects as indexes are not allowed
+    assigning a float to an int variable will ust concatenate it too
 
+    - relative operators evaluate an expression to 1 or 0 (boolean as an int)
+        -> so the presence of an relative operator forces return type to be int.
+
+    - you cannot perform arith operations with objects only variables that equate to ints and floats.
+        so if you want a object in an expression it basically has to be the only thing present.
 
 
